NU-50 comment: fixed font-size on general subcategory on mobile menu TH store

--- a/app/design/frontend/Bangkok/default/web/css/source/_navigation.less
+++ b/app/design/frontend/Bangkok/default/web/css/source/_navigation.less
@@ -947,8 +947,11 @@
     .sidebar-menu .main-subcategories ul ul li:hover a:before, .sidebar-menu .main-subcategories ul ul li:focus a:before, .sidebar-menu .main-subcategories ul ul li.active a:before{
       top: 23px;
     }
+    .sidebar-menu .general-subcategories div a {
+      font-size: 2.3rem;
+    }
     .violet-link strong {
-      font-size: 28px !important;
+      font-size: 30px !important;
       line-height: 0;
     }
   }
